--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,36 @@
     box-sizing: border-box;
     font-family: 'Roboto' , sans-serif;
 }
+
+body {
+    display: flex;
+    justify-content: center;
+    background-color: #0a0a10;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    padding: 15px 0px;
+    max-width: 414px;
+    min-height: 100vh;
+    gap: 12px; /*Espaçamento entre os elementos*/
+}
+
+.blur {
+    width: 414px;
+    height: 200px;
+    background: #ffffff;
+    position: absolute;
+    z-index: -1;
+    opacity: 0.25;
+    filter: blur(24px);
+}
+
+h1 {
+   font-weight: 700;
+   font-size: 28px;
+   line-height: 33px;
+   text-align: center;
+   color: #ffffff;
+}
