--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,10 +50,11 @@ label {
     letter-spacing: -0.488px;
     color: rgba(255, 255, 255, 0.6);
     margin-bottom: 3px;
+    margin-left: 4px;
 }
 
 input {
-    width: 342px;
+    width: 100%;
     height: 35px;
     margin-bottom: 6px;
     background: transparent;
@@ -66,4 +67,73 @@ input {
     line-height: 20px;
     letter-spacing: -0.24px;
     color: #ffffff;
+    padding-left: 4px;
+}
+
+input::placeholder {
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 20px;
+    letter-spacing: -0.24px;
+    color: #ffffff;
+}
+
+.btn-login {
+    width: 100%;
+    height: 68px;
+    background: #d93856;
+
+    font-weight: 900;
+    font-size: 17px;
+    line-height: 2px;
+    color: #ffffff;
+    border: none;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s ease;
+    margin-top: 15px;
+}
+
+.btn-login:hover {
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.btn-login:active {
+    opacity: 0.6;
+}
+
+i {
+    font-weight: 900;
+    font-size: 22px;
+    line-height: 2px;
+}
+
+.btn-google {
+    width: 100%;
+    height: 68px;
+    background: rgba(255, 255, 255, 0.14);
+    font-weight: 900;
+    font-size: 17px;
+    line-height: 2px;
+    color: #ffffff;
+    border: none;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s ease;
+    gap: 12px;
+    margin-top: 15px;
+}
+
+.btn-google:hover {
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.btn-google:active {
+    opacity: 0.6;
 }
