--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ body {
 main {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 15px 0px;
     max-width: 414px;
     min-height: 100vh;
@@ -41,6 +42,8 @@ h1 {
 .container-inputs {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    margin-top: 15px;
 }
 
 label {
@@ -136,4 +139,43 @@ i {
 
 .btn-google:active {
     opacity: 0.6;
+}
+
+.container-link {
+    position: relative;
+    margin-top: 15px;
+}
+
+a {
+    font-weight: 900;
+    font-size: 16px;
+    line-height: 16px;
+    color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
+}
+
+a::after {
+    content: "";
+    width: 0;
+    height: 2px;
+    position: absolute;
+    background: #d93856;
+    bottom: -3px;
+    left: 0;
+    transition: 0.3s ease;
+}
+
+a:hover::after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    background: #d93856;
+    bottom: -3px;
+    left: 0;
+    
+}
+
+span {
+    color: #ffffff;
 }
